@@ -162,6 +162,20 @@ Oct&nbsp;1&nbsp;2003
 
 -->
 
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+Jan&nbsp;26&nbsp;2003
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Yet another Glade port to Windows</B>
+<P>Ivan Wong has ported Glade 2.0.1 and libglade to Windows.
+You can get it at <a href="http://gladewin32.sourceforge.net/">http://gladewin32.sourceforge.net/</a>.
+</font></td></tr>
+
+
 
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
