@@ -1,3 +1,7 @@
+2004-01-26  Damon Chaplin  <damon@gnome.org>
+
+	* index.html: added link to new Win32 port.
+
 2004-01-14  Damon Chaplin  <damon@gnome.org>
 
 	* todo.html: merged in Paolo's stuff about Glade 3.
